weblogのindexスタイルをインストール

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
 @import "wordbook/wordbook";
 @import "wordbook/inputform";
 @import "wordbook/show";
+@import "wordbook/index";
 @import "word/wordcard";
 @import "user/show";
 @import "test/show";
