オンラインフォントを追加

--- a/app/assets/stylesheets/config/font.scss
+++ b/app/assets/stylesheets/config/font.scss
@@ -1,2 +1,4 @@
-.wf-kokoro { font-family: "Kokoro"; }
-.wf-Lobster { font-family: 'Lobster', cursive;}
+.wf-Carter{
+  font-family: 'Carter One', cursive;
+}
+
