--- a/app/views/wordbooks/index.html.haml
+++ b/app/views/wordbooks/index.html.haml
@@ -5,8 +5,8 @@
         = render partial: "wordbook",locals: { wordbook: wordbook, fav: fav, favorite_count: wordbook.favorites.length }
       - else
         = render partial: "wordbook",locals: { wordbook: wordbook, favorite_count: wordbook.favorites.length}
-  .pagenation
+  .pagenation.wf-Carter
     .pagenation__page
       = paginate(@wordbooks)
 .sideBar.sideBar--indexWordBook
-  indexareaです
+  ここでもランキングを実装する
