--- a/app/assets/stylesheets/user/_show.scss
+++ b/app/assets/stylesheets/user/_show.scss
@@ -1,14 +1,19 @@
-.showUser{
-  &__bar{
-    @include card_style(50px,85%);
-    margin: 10px auto;
-    &__name{
-      @include text_center(50px,center);
-      @include font_data(black,20px,bold);
+.main--showUser{
+  width: 100%;
+  display: flex;
+  .showUser{
+    width: 35%;
+    &--wide{
+      width: 65%;
+      border-right: 2px dashed $black;
     }
-    &__fav{
-      @include text_center(50px,center);
-      @include font_data(black,20px,bold);
+    &__bar{
+      @include card_style(50px,95%);
+      margin: 10px auto;
+      &__title{
+        @include text_center(50px,center);
+        @include font_data($black,20px,bold);
+      }
     }
   }
 }
