newスタイルをimportする

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
 @import "wordbook/inputform";
 @import "wordbook/show";
 @import "wordbook/index";
+@import "wordbook/new";
 @import "word/wordcard";
 @import "user/show";
 @import "test/show";
