新規作成画面、編集画面からsidebarを削除

--- a/app/views/wordbooks/edit.html.haml
+++ b/app/views/wordbooks/edit.html.haml
@@ -1,4 +1,2 @@
-.main.main--editWordBook
+.main.main--wordBook
   = render partial: "inputform", locals:{wordbook: @wordbook}
-.sideBar.sideBar--editWordBook
-  裏
