--- a/app/views/wordbooks/new.html.haml
+++ b/app/views/wordbooks/new.html.haml
@@ -1,4 +1,2 @@
-.main.main--newWordBook
+.main.main--wordBook
   = render partial: "inputform", locals:{wordbook: @wordbook}
-.sideBar.sideBar--newWordBook
-  裏
