--- a/app/assets/stylesheets/devise/_devise.scss
+++ b/app/assets/stylesheets/devise/_devise.scss
@@ -1,9 +1,47 @@
-.main--devise{
+.devise{
+  color: $black;
+  padding-top: 200px;
   width: 100%;
-  margin-top: 20px;
-  
-  & .devise{
-    @include noted;
-    padding-top: 100px;
+  background-color: $main-color;
+  &--registrations{
+    padding-top: 130px;
+  }
+  &__body{
+    display: flex;
+    flex-flow: column wrap;
+    @include noted(430px, 500px);
+    & h2{
+      text-align: center;
+      font-size: 25px;
+      border-bottom: dotted 2px $light;
+      padding-top: 20px;
+    }
+    & .new_user{
+      font-size: 18px;
+      text-align: center;
+      border-bottom: dotted 2px $light;
+    }
+    & .if_sessions{
+      text-align: right;
+      margin: 10px;
+      & a{
+        @include reset_a-tag(black);
+      }
+    }
+    &__inputForm{
+      & label{
+        line-height: 40px;
+      }
+      @include devise_form();
+    }
+    &__button{
+      & input{
+        @include reset_form();
+        border: 1px $black solid;
+        padding: 3px 10px;
+        color: $black;
+      }
+      margin: 10px;
+    }
   }
 }
