--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,8 @@
 @import "wordbook/index";
 @import "wordbook/new";
 @import "word/wordcard";
+@import "word/createWord";
+@import "word/new";
 @import "user/show";
 @import "test/show";
 @import "testresult/show";
