--- a/app/assets/stylesheets/mixin/_fav-setting.scss
+++ b/app/assets/stylesheets/mixin/_fav-setting.scss
@@ -31,6 +31,7 @@
   margin: $margin-height $margin-width;
 }
 
+// deviseのログイン画面用スタイル
 @mixin devise_form {
   margin: 30px 0px;
   & input{
@@ -41,6 +42,49 @@
     padding-left: 10px;
     &:focus{
       border: solid 1px $blue;
+    }
+  }
+}
+
+//入力フォーム用のスタイル
+@mixin input_form($width: 400px) {
+  width: $width;
+  margin: 30px auto;
+  padding: 20px;
+  box-sizing: border-box;
+  border: 1px solid $black;
+  color: $black;
+  &__form{
+    & .require{
+      color: red;
+    }
+    & .free{
+      color: gray;
+    }
+    & label{
+      font-weight: bold;
+    }
+    &__input{
+      @include reset_form;
+      @include text_center(50px);
+      width: 90%;
+      margin: 10px auto;
+      padding-left: 10px;
+      border: 1px solid $black;
+      font-size: 20px;
+      &:focus{
+        border: 1px solid red;
+      }
+    }
+  }
+  &__submit{
+    display: flex;
+    justify-content: flex-end;
+    & input{
+      @include reset_form;
+      padding: 10px;
+      border: 1px solid $black;
+      color: $black;
     }
   }
 }
