--- a/app/assets/stylesheets/word/_wordcard.scss
+++ b/app/assets/stylesheets/word/_wordcard.scss
@@ -1,47 +1,51 @@
-.main--indexWord{
-  & .wordcards{
+.wordcards{
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-content: space-around;
+  &--create{
+    align-content: flex-start;
+    height: calc(#{$main-height} - #{$create-wordcard-height});
+    overflow: scroll;
+  }
+  & .wordcard{
+    @include card_style;
+    position: relative;
     display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    align-content: space-around;
-    & .wordcard{
-      @include card_style;
-      position: relative;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      &__edit{
-        @include font_data(gray,20px,bold);
-        & a{
-          @include reset_a-tag(gray);
-        }
-        position: absolute;
-        left: 0;
-        bottom: 0;
+    justify-content: center;
+    align-items: center;
+    &__edit{
+      @include font_data(gray,20px,bold);
+      & a{
+        @include reset_a-tag(gray);
       }
-      &__destroy{
-        @include font_data(gray,20px,bold);
-        & a{
-          @include reset_a-tag(gray);
-        }
-        position: absolute;
-        left: 50px;
-        bottom: 0;
+      position: absolute;
+      left: 0;
+      bottom: 0;
+    }
+    &__destroy{
+      @include font_data(gray,20px,bold);
+      & a{
+        @include reset_a-tag(gray);
       }
-      &__front{
-        @include font_data(black,30px,bold);
-        overflow-wrap: break-word;
-      }
-      &__reverse{
-        @include font_data(black,30px,bold);
-        overflow-wrap: break-word;
-      }
-      &__tag{
-        @include font_data(gray,10px,400);
-        position: absolute;
-        right: 5px;
-        bottom: 5px;
-      }
+      position: absolute;
+      left: 50px;
+      bottom: 0;
+    }
+    &__front{
+      @include font_data(black,30px,bold);
+      overflow-wrap: break-word;
+    }
+    &__reverse{
+      @include font_data(black,30px,bold);
+      overflow-wrap: break-word;
+    }
+    &__tag{
+      @include font_data(gray,10px,400);
+      position: absolute;
+      right: 5px;
+      bottom: 5px;
     }
   }
 }
+
