--- a/app/views/words/new.html.haml
+++ b/app/views/words/new.html.haml
@@ -1,3 +1,11 @@
 .main.main--newWord
 .sideBar
-  サイドバーだよ
+  サイドバーだよ.sideBar.sideBar--createWord
+  .sideBar__top
+    %p
+      = "「#{@wordbook.title}」の単語カード"
+    .sideBar__top__words
+      %p.sideBar__top__words__word 表
+      %p.sideBar__top__words__word 裏
+  .wordcards.wordcards--create
+    = render partial: "wordcard", collection: @words, as: :word
