--- a/app/views/testresults/index.html.haml
+++ b/app/views/testresults/index.html.haml
@@ -7,11 +7,11 @@
       %canvas#chart__averageScore
   .addChart__buttons
     .addChart__button
-      = button_tag "line"
+      = button_tag "Line"
     .addChart__button
-      = button_tag "bar"
+      = button_tag "Bar"
     .addChart__button
-      = button_tag "radar"
+      = button_tag "Radar"
   .charts.charts--empty
 .sideBar.sideBar--indexTestresult
   .testresults
