クラス名の調整

--- a/app/views/testresults/index.html.haml
+++ b/app/views/testresults/index.html.haml
@@ -14,7 +14,7 @@
       = button_tag "Radar"
   .charts.charts--empty
 .sideBar.sideBar--indexTestresult
-  .sideBar__top
+  .sideBar--indexTestresult__top
     %p 受験したテスト一覧
   .testresults
     - @testresults.each.with_index do |testresult,i|
