--- a/app/views/tests/show.html.haml
+++ b/app/views/tests/show.html.haml
@@ -4,12 +4,11 @@
       - @wordbook.test.questions.each.with_index do |question,i|
         .testcard
           .testcard__top
-            = "[#{i+1}] #{question.word.front}"
+            = question.word.front
           .flexbox
             - question.testwords.order("RAND()").each.with_index do |testword,j|
               .testcard__word{"data-id": i*10 + j}
-                = f.radio_button :id, testword.id, name:"testresult[testword_id][q#{testword.question.id}]"
-                = f.label :id, testword.word
-      = f.submit value:"解答", class:"testcard__submit"
-.sideBar.sideBar--showTest
-  テストエリアですよ
+                = f.label :id, for: "testresult_id_#{testword.id}" do
+                  = f.radio_button :id, testword.id, name:"testresult[testword_id][q#{testword.question.id}]",required: "on"
+                  = testword.word
+      = f.submit value:"解答", class:"testcards__submit"
