テスト新規作成画面のimport

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,7 @@
 @import "word/createWord";
 @import "word/new";
 @import "user/show";
+@import "test/new";
 @import "test/show";
 @import "testresult/show";
 @import "testresult/index";
