単語カード用のスタイルをimport

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,8 @@
 @import "word/wordcard";
 @import "word/createWord";
 @import "word/new";
+@import "word/index";
+@import "word/wordTop";
 @import "user/show";
 @import "test/new";
 @import "test/show";
