スクロールバーを非表示にするmixinを追加

--- a/app/assets/stylesheets/mixin/_fix.scss
+++ b/app/assets/stylesheets/mixin/_fix.scss
@@ -31,3 +31,11 @@
     display: inline-block;
   }
 }
+
+//スクロールバーを非表示にする
+@mixin hiddenScrollBar{
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  -ms-overflow-style: none;
+}
