単語カード一覧topの部分テンプレート化

--- a/app/assets/stylesheets/word/_wordcard.scss
+++ b/app/assets/stylesheets/word/_wordcard.scss
@@ -3,10 +3,14 @@
   flex-flow: row wrap;
   justify-content: space-around;
   align-content: space-around;
-  &--create{
+  &--index{
+    margin: 0 auto;
+    max-width: 1000px;
+    min-width: 850px;
     align-content: flex-start;
     height: calc(#{$main-height} - #{$create-wordcard-height});
     overflow: scroll;
+    @include hiddenScrollBar;
   }
   & .wordcard{
     @include card_style;
