--- a/app/views/words/index.html.haml
+++ b/app/views/words/index.html.haml
@@ -1,5 +1,5 @@
 .main.main--indexWord
-  .wordcards
+  = render partial: "wordTop", locals: {wordbook: @wordbook}
     = render partial: "wordcard",collection: @wordbook.words, as: :word
 
 .sideBar.sideBar--indexWord
