--- a/app/assets/stylesheets/mixin/_fav-setting.scss
+++ b/app/assets/stylesheets/mixin/_fav-setting.scss
@@ -88,3 +88,12 @@
     }
   }
 }
+
+// 親要素にrelativeが指定されていた場合に中央寄せする
+@mixin absoluteCenter($top: 50%, $left: 50%) {
+  position: absolute;
+  top: $top;
+  left: $left;
+  transform: translate(0, -50%);
+  transform: translate(0, -50%);
+}
