--- a/app/assets/stylesheets/wordbook/_show.scss
+++ b/app/assets/stylesheets/wordbook/_show.scss
@@ -1,20 +1,24 @@
-
 .main--showWordBook{
   width: 100%;
   display: flex;
   flex-flow: row nowrap;
-  & .wordcards{
+  &__wrapper{
     width: 100%;
-    & .wordcard{
-      @include card_style(600px,80%);
-      @include font_data(black,100px,bold);
-      margin: 30px auto;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      &__word{
-        overflow-wrap: break-word;
-      }
+    position: relative;
+  }
+  &__wordcard{
+    @include absoluteCenter(45%, 10%);
+    @include card_style(80%,80%);
+    @include font_data(black,100px,bold);
+    margin: 30px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &__word{
+      width: 95%;
+      margin: 0 auto;
+      text-align: center;
+      overflow-wrap: break-word;
     }
   }
   & .button__arrow{
