--- a/app/assets/stylesheets/wordbook/_show.scss
+++ b/app/assets/stylesheets/wordbook/_show.scss
@@ -29,4 +29,13 @@
       color: black;
     }
   }
+  &__footer{
+    position: fixed;
+    bottom: 10px;
+    right: 30px;
+    font-size: 20px;
+    & a{
+      @include reset_a-tag($black);
+    }
+  }
 }
