--- a/app/views/wordbooks/_wordbook.html.haml
+++ b/app/views/wordbooks/_wordbook.html.haml
@@ -11,21 +11,23 @@
     = link_to "作者: #{wordbook.user.nickname}", user_path(wordbook.user.id)
   .wordbook__created-at
     = l(wordbook.created_at, format: :long)
-  .wordbook__tags
-    - wordbook.tags.each do |tag|
-      = "##{tag.name}"
   .wordbook__reference
     = "参照元: "
     = wordbook.reference.present? ? wordbook.reference : "なし"
   .wordbook__favorite_count
     = "お気に入り: #{favorite_count}"
-  - if user_signed_in?
-    .wordbook__fav{"data-fav": fav_id}
-      = button_tag do
-        - if fav_id == id
-          = icon("fas fa-3x", "bookmark")
-        - else
-          = icon('far fa-3x', 'bookmark')
+  .flexbox.flexbox--wordcard
+    - if user_signed_in? && request.fullpath == "/"
+      .wordbook__fav{"data-fav": fav_id}
+        = button_tag do
+          - if fav_id == id
+            = icon("fas fa-3x", "bookmark")
+          - else
+            = icon('far fa-3x', 'bookmark')
+    - if user_signed_in? && wordbook.test
+      .wordbook__test
+        = link_to wordbook_test_path(wordbook.id, wordbook.test.id) do
+          = icon("fas fa-2x", "highlighter")
   - if user_signed_in? && current_user.id == wordbook.user.id && request.fullpath.match("/users")
     .flexbox.flexbox--buttons
       .wordbook__button
