--- a/app/assets/stylesheets/wordbook/_wordbook.scss
+++ b/app/assets/stylesheets/wordbook/_wordbook.scss
@@ -6,24 +6,27 @@
   & .wordbook{
     @include card_style;
     position: relative;
+    & a{
+      @include reset_a-tag($black);
+    }
+    &__link{
+      @include reset_a-tag(black);
+    }
     &__title{
       @include text_center(150px,center);
       @include font_data(black,30px,bold);
-      & a{
-        @include reset_a-tag(black);
-      }
     }
     &__viewed{
-      @include font_data(gray,12px,500);
+      @include font_data($black,12px,500);
       position: absolute;
       right: 0;
       bottom: 15px;
       margin-right: 5px;
     }
     &__user{
-      @include font_data(gray,15px,500);
-      & a{
-        @include reset_a-tag(gray);
+      @include font_data($black,15px,500);
+      &:hover{
+        border-bottom: 1px solid $black;
       }
       position: absolute;
       right: 0;
@@ -31,71 +34,63 @@
       margin-right: 5px;
     }
     &__created-at{
-      @include font_data(gray,12px,500);
+      @include font_data($black,12px,500);
       position: absolute;
       right: 0;
       bottom: 0;
       margin-right: 5px;
     }
     &__tags{
-      @include font_data(gray,12px,500);
+      @include font_data($black,12px,500);
       position: absolute;
       left: 30px;
       top: 0;
       margin-right: 5px;
     }
     &__reference{
-      @include font_data(gray,12px,500);
+      @include font_data($black,12px,500);
       position: absolute;
       right: 0;
       top: 0;
       margin-right: 5px;
     }
     &__favorite_count{
-      @include font_data(gray,12px,500);
+      @include font_data($black,12px,500);
       position: absolute;
       right: 0;
       bottom: 28px;
       margin-right: 5px;
     }
     &__fav{
+      margin-left: 5px;
       & button{
         @include reset_form;
-        @include font_data(gray,10px);
+        @include font_data($black,10px);
         & :hover{
-          color: black;
+          text-shadow: 0px 0px 2px $black;
         }
       }
-      position: absolute;
-      left: 5px;
-      top: 5px;
     }
-    &__edit{
-      @include font_data(gray,20px,bold);
-      & a{
-        @include reset_a-tag(gray);
+    &__test{
+      font-size: 14px;
+      margin-left: 5px;
+      & :hover{
+        text-shadow: 0px 0px 1px $black;
       }
-      position: absolute;
-      left: 0;
-      bottom: 0;
     }
-    &__add{
-      @include font_data(gray,20px,bold);
-        & a{
-          @include reset_a-tag(gray);
-        }
-        position: absolute;
-        left: 50px;
-        bottom: 0;
+    &__button{
+      margin-left: 5px;
+      @include font_data($black, 18px);
     }
-    &__destroy{
-      @include font_data(gray,20px,bold);
-      & a{
-        @include reset_a-tag(gray);
-      }
-      position: absolute;
-      left: 100px;
-      bottom: 0;
-    }
+  }
+}
+.flexbox{
+  &--wordcard{
+    position: absolute;
+    top: 5px;
+  }
+  &--buttons{
+    position: absolute;
+    bottom: 2px;
   }
 }
