スタイルを同一記述にまとめるためにクラス名を変更

--- a/app/views/words/_wordcard.html.haml
+++ b/app/views/words/_wordcard.html.haml
@@ -1,13 +1,13 @@
 - if word.id
   .wordcard
     - if current_user&.id == word.wordbook.user.id
-    .wordcard__front
       .flexbox.flexbox--buttons
         .wordcard__button
           = link_to "編集",edit_wordbook_word_path(word.wordbook.id, word.id)
         .wordcard__button
           = link_to "削除",wordbook_word_path(word.wordbook.id, word.id),method: :delete
+    .wordcard__word
       = word.front
   .wordcard
-    .wordcard__reverse
+    .wordcard__word
       = word.reverse
