--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -2,7 +2,7 @@
   .showUser.showUser
     .showUser__bar
       .showUser__bar__title
-        - if user_signed_in? && current_user.id == @user.id
+        - if current_user&.id == @user.id
           = icon('fas fa', 'user')
           自分の単語帳
         - else
@@ -19,10 +19,10 @@
     .showUser__bar
       .showUser__bar__title
         = icon("fas fa", "bookmark")
-        = current_user.id == params[:id].to_i ? "あなたのお気に入り" : "#{@user.nickname}のお気に入り"
+        = current_user&.id == params[:id].to_i ? "あなたのお気に入り" : "#{@user.nickname}のお気に入り"
     .wordbooks
       - @favorites&.each do |faved|
-        - if fav = faved.wordbook.favorites.find_by(user_id: current_user.id)
+        - if fav = faved.wordbook.favorites.find_by(user_id: current_user&.id)
           = render partial: "wordbooks/wordbook",locals: { wordbook: faved.wordbook, fav: fav, favorite_count: faved.wordbook.favorites.length }
         - else
           = render partial: "wordbooks/wordbook",locals: { wordbook: faved.wordbook, favorite_count: faved.wordbook.favorites.length}
