--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -19,6 +19,8 @@
         = f.label :password_confirmation, "パスワード確認"
         %br/
         = f.password_field :password_confirmation, autocomplete: "new-password", required: "on", placeholder: "パスワードをもう一度入力"
+      .field.devise__body__recaptcha
+        = recaptcha_tags
       .actions.devise__body__button
         = f.submit "登録する"
     = render "devise/shared/links"
