recaptchaの場所を微調整

--- a/app/assets/stylesheets/devise/_devise.scss
+++ b/app/assets/stylesheets/devise/_devise.scss
@@ -34,6 +34,10 @@
       }
       @include devise_form();
     }
+    &__recaptcha{
+      width: 300px;
+      margin: 0 auto;
+    }
     &__button{
       & input{
         @include reset_form();
