--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,7 @@
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
     = favicon_link_tag('icon.png')
+    = analytics_init if Rails.env.production?
   %body
     %header.header
       = link_to root_path, class: "header__title" do
