--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,6 +29,10 @@
           = link_to destroy_user_session_path, method: :delete, class: "header__icons__icon" do
             = icon('fas fa-3x', 'sign-out-alt')
             %p.header__icons__icon__explain ログアウト
+          - if current_user&.admin
+            = link_to admins_path, class: "header__icons__icon" do
+              = icon("fas fa-3x", "eye")
+              %p.header__icons__icon__explain 管理者画面
         - else
           = link_to new_user_session_path, class: "header__icons__icon" do
             = icon('fas fa-3x', 'sign-in-alt')
