30文字入力に合わせてtext-areaに変更

--- a/app/assets/stylesheets/word/_createWord.scss
+++ b/app/assets/stylesheets/word/_createWord.scss
@@ -1,4 +1,10 @@
 .createWord{
-  @include input_form(500px);
+  @include input_form(380px);
   margin-top: $create-wordcard-height;
+  &__form{
+    &__input{
+      height: 80px;
+      line-height: 40px;
+    }
+  }
 }
