--- a/app/assets/stylesheets/test/_new.scss
+++ b/app/assets/stylesheets/test/_new.scss
@@ -34,6 +34,7 @@
           box-shadow: 0px 0px 2px $black;
         }
         &--correct{
+          width: 500px;
           border: none;
           border-bottom: 3px double $black;
           &:focus{
