--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,7 @@
 @import "config/number";
 @import "mixin/fix";
 @import "mixin/fav-setting";
+@import "mixin/responsive";
 
 // スタイルシートの宣言
 @import "style";
