メディアクエリのmixinを定義

--- a/app/assets/stylesheets/mixin/_responsive.scss
+++ b/app/assets/stylesheets/mixin/_responsive.scss
@@ -8,3 +8,8 @@ $breakpoints: (
   '4k'       : 'screen and (max-width: 2560px)',
 ) !default;
 
+@mixin mq($breakpoint: mobile) {
+  @media #{map-get($breakpoints, $breakpoint)} {
+    @content;
+  }
+}
