--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,7 +15,7 @@
     %header.header
       = link_to root_path, class: "header__title" do
         = image_tag "logo.png", class:"header__title__logo"
-        voCab
+        %span voCab
       .header__icons
         - if user_signed_in?
           = link_to new_wordbook_path, class:"header__icons__icon" do
@@ -27,7 +27,7 @@
           = link_to user_testresults_path(current_user.id), class: "header__icons__icon" do
             = icon('fas fa-3x', 'chart-bar')
             %p.header__icons__icon__explain テスト結果
-          = link_to destroy_user_session_path, method: :delete, class: "header__icons__icon" do
+          = link_to destroy_user_session_path, method: :delete, class: "header__icons__icon header__icons__icon--logout" do
             = icon('fas fa-3x', 'sign-out-alt')
             %p.header__icons__icon__explain ログアウト
           - if current_user&.admin
