--- a/app/assets/stylesheets/wordbook/_show.scss
+++ b/app/assets/stylesheets/wordbook/_show.scss
@@ -34,6 +34,9 @@
     width: 50px;
     @include reset_form();
     color: gray;
+    @include mq(mobile){
+      display: none;
+    }
     & :hover{
       color: black;
     }
