--- a/app/assets/stylesheets/word/index.scss
+++ b/app/assets/stylesheets/word/index.scss
@@ -1,3 +1,6 @@
+.main--indexWord{
+}
+
 .sideBar--indexWord{
   background-color: $white;
   border-left: 1px solid $black;
@@ -17,6 +20,29 @@
       & i{
         position: absolute;
         left: 20px;
+      }
+    }
+  }
+  @include mq(mobile){
+    width: 100%;
+    height: 30px;
+    border: none;
+    float: none;
+    border-bottom: 1px solid $black;
+    &__link{
+      margin: 0;
+      width: 50px;
+      height: 50px;
+      & a{
+        & p{
+          bottom: 30px;
+          left: 0px;
+        }
+        & i{
+          font-size: 40px;
+          bottom:30px;
+          left: 40px;
+        }
       }
     }
   }
