--- a/app/assets/stylesheets/word/new.scss
+++ b/app/assets/stylesheets/word/new.scss
@@ -1,12 +1,18 @@
 .main--createWord{
-  width: 40%;
+  width: 30%;
+  @include mq(mobile){
+    width: 100%;
+  }
 }
 
 .sideBar{
   &--createWord{
-    width: 60%;
+    width: 70%;
     background-color: $white;
     border-left: 1px solid $black;
+    @include mq(mobile){
+      display: none;
+    }
   }
   &__top{
     height:  $create-wordcard-height;
