入力フォームをモバイル用に追加設定

--- a/app/assets/stylesheets/word/_createWord.scss
+++ b/app/assets/stylesheets/word/_createWord.scss
@@ -1,5 +1,8 @@
 .createWord{
   @include input_form(380px);
+  @include mq(mobile){
+    @include input_form(300px);
+  }
   margin-top: $create-wordcard-height;
   &__form{
     &__input{
