--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,5 +1,5 @@
 .main.main--showUser
-  .showUser.showUser
+  .showUser
     .showUser__bar
       .showUser__bar__title
         - if current_user&.id == @user.id
