--- a/app/assets/stylesheets/devise/_devise.scss
+++ b/app/assets/stylesheets/devise/_devise.scss
@@ -1,10 +1,16 @@
 .devise{
   color: $black;
   padding-top: 200px;
+  @include mq(mobile){
+    padding-top: 70px;
+  }
   width: 100%;
   background-color: $main-color;
   &--registrations{
     padding-top: 130px;
+    @include mq(mobile){
+      padding-top: 40px;
+    }
   }
   &__body{
     display: flex;
